--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://it2810-34.idi.ntnu.no/prosjekt2",
   "name": "pro2",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "homepage": "http://it2810-34.idi.ntnu.no/prosjekt2"
+  }
 }
